<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.infnet.todolist.LoginActivity"
    android:padding="@dimen/activity_padding"
    android:background="#ffffff"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="133dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/img_logo_description"
        app:srcCompat="@drawable/pict_task_list"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="90dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/simple_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_ola"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Display1" />

        <TextView
            android:id="@+id/instrucao_pt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_login_instrucao_pt1"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_login_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/simple_margin">

            <EditText
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/lbl_login"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_senha_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/simple_margin">

        <EditText
            android:id="@+id/input_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/lbl_senha"
            android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/simple_margin"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_cadastro"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/simple_margin"
            android:layout_weight="1"
            android:text="@string/btn_cadastro" />

        <!--<TextView
            android:id="@+id/instrucao_pt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_login_instrucao_pt2"
            android:layout_marginBottom="@dimen/simple_margin"
            android:textAlignment="center" />

         <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_facebook_login"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/half_margin"
            android:layout_marginTop="16dp" /> -->

    </LinearLayout>
    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_margin="@dimen/ad_margin"/>
</RelativeLayout>
