<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        tools:context="br.com.infnet.todolist.RegisterActivity">

        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">


            <TextView
                android:id="@+id/descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/txt_cadastro_instrucao"
                android:paddingTop="@dimen/activity_double_padding"
                android:paddingLeft="@dimen/activity_double_padding"
                android:paddingRight="@dimen/activity_double_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/descricao"
                android:layout_below="@+id/descricao"
                android:layout_marginTop="@dimen/spacer"
                android:orientation="vertical"
                android:id="@+id/linearLayout"
                android:paddingLeft="@dimen/activity_double_padding"
                android:paddingRight="@dimen/activity_double_padding">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_nome_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/simple_margin">

                <EditText
                    android:id="@+id/input_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/spacer"
                    android:inputType="textPersonName"
                    android:hint="@string/lbl_nome"
                    />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_email_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/simple_margin">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/spacer"
                    android:inputType="textEmailAddress"
                    android:hint="@string/lbl_login"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_senha_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/simple_margin">

                <EditText
                    android:id="@+id/input_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/spacer"
                    android:inputType="textPassword"
                    android:hint="@string/lbl_senha"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_senha_check_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/simple_margin">

                <EditText
                    android:id="@+id/input_senha_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/spacer"
                    android:inputType="textPassword"
                    android:hint="@string/lbl_senha_check"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacer"
                android:paddingLeft="@dimen/activity_double_padding"
                android:paddingRight="@dimen/activity_double_padding"
                android:orientation="horizontal"
                android:id="@+id/linearLayout_btn_group">

                <Button
                    android:id="@+id/btn_clear"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_limpar" />

                <Button
                    android:id="@+id/btn_save"
                    style="@android:style/Widget.Material.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_salvar" />
            </LinearLayout>

            <!-- view for AdMob Banner Ad -->
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout_btn_group"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"
                android:layout_margin="@dimen/ad_margin"/>

        </RelativeLayout>

    </ScrollView>

