<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.infnet.todolist.DetailsActivity"
    android:focusableInTouchMode="true"
    android:padding="@dimen/activity_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_edit_title"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/half_margin"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:alpha="0.87"
                ads:srcCompat="@drawable/ic_mode_edit_black_24dp" />

            <TextView
                android:id="@+id/task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:text="Title"
                android:clickable="true"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:alpha="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacer"
            android:gravity="top|left|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_edit_description"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/half_margin"
                android:adjustViewBounds="false"
                android:alpha="0.87"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                ads:srcCompat="@drawable/ic_mode_edit_black_24dp" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_margin="@dimen/half_margin"
                android:clickable="true"
                android:text="Description"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:alpha="0.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacer">

            <ImageView
                android:id="@+id/img_edit_date"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/half_margin"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:alpha="0.87"
                app:srcCompat="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/task_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:text="Date"
                android:clickable="true"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            android:alpha="0.2"/>

<!--        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_edit_file"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/half_margin"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:alpha="0.87"
                app:srcCompat="@drawable/ic_attach_file_black_24dp" />

            <TextView
                android:id="@+id/task_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/half_margin"
                android:text="File"
                android:textAppearance="@android:style/TextAppearance.Material.Body1" />
        </LinearLayout>
-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/spacer"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_area_comentarios"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                android:id="@+id/msg_no_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_no_comments"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:visibility="visible"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/double_margin"/>

            <ListView
                android:id="@+id/listview_comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:layout_alignParentTop="true"/>

            </RelativeLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:focusableInTouchMode="true"
        android:padding="@dimen/half_margin"
        android:layout_marginTop="@dimen/spacer">

        <EditText
            android:id="@+id/edittext_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textCapSentences"
            android:hint="@string/lbl_add_comment" />

        <Button
            android:id="@+id/btn_comment"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_comentar" />
    </LinearLayout>


        <!-- view for AdMob Banner Ad -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ad_margin"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </LinearLayout>



</ScrollView>
